feat(permission): set permission in group
